Implemented Lazy-Loading, Optimized Components and Re-styled

--- a/Jira Ticket Editor/components/TicketComponents/DateInput/DateInput.module.scss
+++ b/Jira Ticket Editor/components/TicketComponents/DateInput/DateInput.module.scss
@@ -38,6 +38,9 @@
         // Padding
         padding: 0;
 
+        // Color
+        color: c.$lightGrayText;
+
         // Text
         font-size: max(1.6vh, 16px);
         font-weight: normal;
@@ -61,10 +64,13 @@
 
         // Border
         border-radius: max(0.4vh, 4px);
-        border: 1px solid c.$containerGray;
+        border: 1px solid c.$darkGray2;
 
         // Padding
         padding: max(1.2vh, 12px) max(0.8vh, 8px) max(1.2vh, 12px) max(0.8vh, 8px);
+
+        // Color
+        color: c.$lightGrayText;
 
         // Text
         font-size: max(1.4vh, 14px);
@@ -78,21 +84,21 @@
         // Hover
         &:hover{
             // Colors
-            background-color: c.$containerGrayHighlight;            
+            background-color: c.$darkGray3;           
         }
 
         // Active and Focus
         &:focus{
             // Color
-            background-color: rgb(68, 68, 68);
+            background-color: c.$darkGray1;
 
             // Border
-            border: 1px solid rgb(26, 131, 183);
+            border: 1px solid c.$powderBlue2;
         }
 
         &::placeholder{
             // Color
-            color: white;
+            color: c.$lightGrayText;
         }
     }
 }
