--- a/Jira Ticket Editor/components/TicketComponents/RichTextInput/RichTextInput.module.scss
+++ b/Jira Ticket Editor/components/TicketComponents/RichTextInput/RichTextInput.module.scss
@@ -36,6 +36,9 @@
         // Padding
         padding: 0;
 
+        // Color
+        color: c.$lightGrayText;
+
         // Text
         font-size: max(1.6vh, 16px);
         font-weight: normal;
@@ -46,7 +49,7 @@
         position: relative;
 
         // Dimensions
-        width: calc(100% - max(1vh, 10px));
+        width: 100%;
 
         // Display Properities
         display: flex;
@@ -54,7 +57,7 @@
 
         // Border
         border-radius: max(0.4vh, 4px);
-        border: 1px solid c.$containerGray;
+        border: 1px solid c.$darkGray2;
 
         // Text
         font-size: max(1.4vh, 14px);
@@ -68,12 +71,7 @@
         // Hover
         &:hover{
             // Colors
-            background-color: c.$containerGrayHighlight;            
-        }
-
-        &::placeholder{
-            // Color
-            color: white;
+            background-color: c.$darkGray3;            
         }
     }
 
@@ -87,7 +85,7 @@
 
         // Border
         border-radius: max(0.4vh, 4px);
-        border: 1px solid c.$containerGray;
+        border: 1px solid c.$darkGray2;
 
         // Padding
         padding: max(1.2vh, 12px) max(0.8vh, 8px) max(1.2vh, 12px) max(0.8vh, 8px);
@@ -104,7 +102,7 @@
         // Hover
         &:hover{
             // Colors
-            background-color: c.$containerGrayHighlight;            
+            background-color: c.$darkGray3;           
         }
 
         // Children
@@ -125,7 +123,7 @@
             border-radius: max(0.4vh, 4px);
 
             // Color
-            background-color: rgb(59, 59, 59);
+            background-color: c.$darkGray0
         }
 
         blockquote {
@@ -145,19 +143,91 @@
             position: relative;
 
             // Color
-            color: c.$boxGrayHighlight;
+            color: c.$darkGray9;
 
             // Text
             font-style: italic;
         }
     }
 
-    // Focus
-    .focused{
-        // Color
-        background-color: rgb(68, 68, 68) !important;
 
-        // Border
-        border: 1px solid rgb(26, 131, 183);
+    .buttonContainer{
+        // Position
+        position: relative;
+        margin-top: max(1vh, 10px);
+
+        // Dimensions
+        width: 100%;
+        height: max(4vh, 40px);
+
+        // Display Properties
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;        
+
+        .saveButton{
+            // Position
+            position: relative;
+            margin-right: max(1.5vh, 15px);
+
+            // Dimensions
+            height: max(4vh, 40px);
+
+            // Padding
+            padding: 0 max(1.5vh, 15px);
+
+            // Border
+            border-radius: max(0.4vh, 4px);
+
+            // Color
+            background-color: c.$powderBlue1;
+
+            // Text
+            font-size: max(1.4vh, 14px);
+            font-weight: 600;
+
+            // Shadow
+			box-shadow: 0 max(1px, 0.1vh) max(7px, 0.7vh) 0 c.$blackShadow1;
+
+            // Hover
+            &:hover{
+                // Color
+                background-color: c.$powderBlue2;
+            }
+        }
+
+        .cancelButton{
+            // Position
+            position: relative;
+
+            // Dimensions
+            height: max(4vh, 40px);
+
+            // Padding
+            padding: 0 max(1.5vh, 15px);
+
+            // Border
+            border-radius: max(0.4vh, 4px);
+
+            // Text
+            font-size: max(1.4vh, 14px);
+            font-weight: 600;
+
+            // Hover
+            &:hover{
+                // Color
+                background-color: c.$darkGray5;
+            }
+        }
     }
+}
+
+// Focus
+.focused{
+    // Color
+    background-color: c.$darkGray1 !important;
+
+    // Border
+    border: 1px solid c.$powderBlue2 !important;
 }
