--- a/Jira Ticket Editor/components/TicketComponents/SentimentInput/SentimentInput.module.scss
+++ b/Jira Ticket Editor/components/TicketComponents/SentimentInput/SentimentInput.module.scss
@@ -37,6 +37,9 @@
         // Padding
         padding: 0;
 
+        // Color
+        color: c.$lightGrayText;
+
         // Text
         font-size: max(1.6vh, 16px);
         font-weight: normal;
@@ -60,7 +63,7 @@
 
         // Border
         border-radius: max(0.4vh, 4px);
-        border: 1px solid c.$containerGray;
+        border: 1px solid c.$darkGray2;
 
         // Padding
         padding: 0 max(0.8vh, 8px) 0 max(0.8vh, 8px);
@@ -71,16 +74,16 @@
         // Hover
         &:hover{
             // Color
-            background-color: c.$containerGrayHighlight;
+            background-color: c.$darkGray3;
         }
 
         // Custom Focus
         &.focused{
             // Color
-            background-color: rgb(68, 68, 68);
+            background-color: c.$darkGray1;
 
             // Border
-            border: 1px solid rgb(26, 131, 183);
+            border: 1px solid c.$powderBlue2;
         }
         
         // Children
@@ -98,6 +101,9 @@
             flex-wrap: nowrap;
             justify-content: flex-start;
             align-items: center;
+
+            // Color
+            color: c.$lightGrayText;
             
             // Text
             font-size: max(1.4vh, 14px);
@@ -108,7 +114,7 @@
             // Placeholder
             &::placeholder{
                 // Color
-                color: white
+                color: c.$lightGrayText
             }
         }
 
@@ -131,10 +137,10 @@
             border-radius: max(0.3vh, 3px);
 
             // Color
-            background-color: c.$containerGray;
+            background-color: c.$darkGray2;
 
             // Shadow
-            box-shadow: 0 max(2px, 0.2vh) max(7px, 0.7vh) 0 rgba(0, 0, 0, 0.6);
+            box-shadow: 0 max(2px, 0.2vh) max(7px, 0.7vh) 0 c.$blackShadow2;
 
             // Overflow
             overflow-y: auto;
@@ -195,7 +201,7 @@
                 // Hover
                 &:hover{
                     // Color
-                    background-color: c.$containerGrayHighlight;
+                    background-color: c.$darkGray3;
 
                     // Cursor
                     cursor: pointer;
@@ -208,6 +214,9 @@
 
                     // Dimensions
                     width: calc(100% - max(3.5vh, 35px));
+
+                    // Color
+                    color: c.$lightGrayText;
 
                     // Text
                     font-size: max(1.4vh, 14px);
@@ -238,6 +247,9 @@
 
                 // Padding
                 padding: max(0.5vh, 5px) max(0.8vh, 8px) max(0.5vh, 5px) max(0.8vh, 8px);
+
+                // Color
+                color: c.$lightGrayText;
 
                 // Text
                 font-size: max(1.4vh, 14px);
